@@ -15,38 +15,40 @@
 //  You should have received a copy of the GNU Affero General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 //
-// File: includes/t_port.php
+// File: includes/BntPorts.php
 
-if (strpos ($_SERVER['PHP_SELF'], 't_port.php')) // Prevent direct access to this file
+if (strpos ($_SERVER['PHP_SELF'], 'BntPorts.php')) // Prevent direct access to this file
 {
     $error_file = $_SERVER['SCRIPT_NAME'];
     include_once './error.php';
 }
 
-function t_port ($ptype, $langvars)
+class BntPorts
 {
-    switch ($ptype)
-    {
-    case "ore":
-        $ret = $langvars['l_ore'];
-        break;
-    case "none":
-        $ret = $langvars['l_none'];
-        break;
-    case "energy":
-        $ret = $langvars['l_energy'];
-        break;
-    case "organics":
-        $ret = $langvars['l_organics'];
-        break;
-    case "goods":
-        $ret = $langvars['l_goods'];
-        break;
-    case "special":
-        $ret = $langvars['l_special'];
-        break;
-    }
-
-    return $ret;
+	static function getType ($ptype, $langvars)
+	{
+    	switch ($ptype)
+    	{
+    	case "ore":
+        	$ret = $langvars['l_ore'];
+	        break;
+    	case "none":
+        	$ret = $langvars['l_none'];
+	        break;
+    	case "energy":
+        	$ret = $langvars['l_energy'];
+	        break;
+    	case "organics":
+        	$ret = $langvars['l_organics'];
+	        break;
+    	case "goods":
+        	$ret = $langvars['l_goods'];
+	        break;
+    	case "special":
+        	$ret = $langvars['l_special'];
+	        break;
+    	}
+    	return $ret;
+	}
 }
 ?>
