@@ -18,7 +18,6 @@
 // File: main.php
 
 include './global_includes.php';
-include './includes/t_port.php';
 include './includes/player_insignia_name.php';
 include './includes/calc_score.php';
 include './includes/calc_avg_tech.php';
@@ -455,7 +454,7 @@ echo "<td style='vertical-align:top;'>\n";
 if ($sectorinfo['port_type'] != "none" && strlen($sectorinfo['port_type']) >0)
 {
     echo "<div style='color:#fff; text-align:center; font-size:14px;'>\n";
-    echo "{$langvars['l_tradingport']}:&nbsp;<span style='color:#0f0;'>". ucfirst (t_port ($sectorinfo['port_type'], $langvars)) ."</span>\n";
+    echo "{$langvars['l_tradingport']}:&nbsp;<span style='color:#0f0;'>". ucfirst (BntPorts::getType ($sectorinfo['port_type'], $langvars)) ."</span>\n";
     echo "<br>\n";
     echo "<a class='new_link' style='font-size:14px;' href='port.php' title='Dock with Space Port'><img style='width:100px; height:70px;' class='mnu' src='images/space_station_port.png' alt='Space Station Port'></a>\n";
     echo "</div>\n";
